--- a/src/index.css
+++ b/src/index.css
@@ -186,4 +186,38 @@ footer {
   align-self: stretch;
   padding: 1rem;
   color: white;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 480px) {
+  body{ 
+    padding: 1rem;
+  }
+  .weatherForm {
+    flex-direction: column;
+    gap: 0.5rem; 
+  }
+
+  .weatherForm input[type="text"] {
+    border-radius: 10px; 
+    width: 100%;
+  }
+
+  .weatherForm button {
+    border-radius: 10px; 
+    width: 100%; 
+  }
+
+  .error-message {
+    font-size: 0.8rem;
+  }
 }
