Remove text attribute from input to avoid werid webpack conflict

--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,7 @@ body {
   justify-content: center;
 }
 
-.weatherForm input[type=text] {
+.weatherForm input {
   outline: none;
   border: none;
   width: 70%;
