Edit input style regarding type

--- a/src/index.css
+++ b/src/index.css
@@ -207,7 +207,7 @@ footer a:hover {
     gap: 0.5rem; 
   }
 
-  .weatherForm input[type="text"] {
+  .weatherForm input {
     border-radius: 10px; 
     width: 100%;
   }
