--- a/src/index.css
+++ b/src/index.css
@@ -75,18 +75,18 @@ h6 {
 
 :root {
   --body-background-color: #0b131e;
-  --primary-text-color: #fcb982;
+  --primary-text-color: #e7e5e6;
   --secondary-text-color: #bfc6d2;
   --secondary-background-color: #202b3b;
-  --button-background-color: #d58866;
-  --hovered-button-background-color: #febb84;
+  --button-background-color: #1a5bbf;
+  --hovered-button-background-color: #0195ff;
   --failed-data-retrieval-color: #F44336;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   min-height: 100vh;
-  background: url("./images/background-image.png");
+  background: var(--body-background-color);
   background-size: cover;
   color: var(--primary-text-color);
   padding-top: 2rem;
@@ -188,10 +188,22 @@ footer {
   color: white;
   font-size: 1rem;
   font-weight: bold;
+  display: grid;
+  place-content: center;
 }
 
 footer a {
   text-decoration: none;
+}
+
+footer img {
+  width: 40px;
+  height: 40px;
+  transition: filter 0.3s ease;
+}
+
+footer img:hover {
+  filter: brightness(1.5);
 }
 
 footer a:hover {
